with writing in folder photo_text

--- a/ocr_with_pytesseract.ipynb
+++ b/ocr_with_pytesseract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,9 +251,22 @@
    ],
    "source": [
     "filename = './data/photo_2019-12-20_14-12-24.jpg'\n",
+    "name = 'photo_2019-12-20_14-12-24'\n",
     "plt.figure(figsize=(21,17))\n",
     "plt.imshow(Image.open(filename))\n",
     "print(extract_text_from_image_file(filename, \"ukr\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = extract_text_from_image_file(filename, \"ukr\")\n",
+    "full_photo_text_path = os.path.join(os.getcwd(), 'photo_text', \"text_\" + name)\n",
+    "with open(full_photo_text_path + \".docx\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(text)"
    ]
   },
   {
